# dx11-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README.txt  imgui.ini
assets/shaders/: albedo.hlsl  basic.hlsl  blinn_phong_shading.hlsl  debug_line.hlsl  debug_wireframe.hlsl  deferred_geometry.hlsl  deferred_lighting.hlsl  flat.hlsl  line.hlsl  phong_lighting.hlsl  phong_shading.hlsl  skymap.hlsl
source/: CallbackHelper.h  MathHelper.cpp  MathHelper.h  NonCopyable.h  callback-helper.h  callback_helper.h  color.h  cs300-project.cpp  cs300-project.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  globals.cpp  globals.h  image.cpp  image.h  main.cpp  math_helper.cpp  math_helper.h  mesh.cpp  mesh.h  os_win32.cpp  os_win32.h  render_dx11.cpp  render_dx11.h  shader.cpp  shader.h  texture.cpp  texture.h
source/Graphics/: Cubemap.cpp  Cubemap.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  Render_DX11.cpp  Render_DX11.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
source/Platform/: OS_Win32.cpp  OS_Win32.h
source/Systems/: IModule.h  ISystem.h  Runner.cpp  Runner.h
source/geometry/: box.h  interval.h  plane.h  point.h  ray.h  sphere.h  triangle.h  vec.h
source/hierarchies/: kdtree.h  octree.h
source/shaders/: debug_line.hlsl  debug_wireframe.hlsl  deferred_geometry.hlsl  deferred_lighting.hlsl  flat.hlsl  phong_common.hlsl
source/structures/: per_frame.h  per_light.h  per_object.h  structure_instantiation_cpp.h  structure_instantiation_hlsl.h  structure_system.h
source/structures/types/: types_cpp.h
